[package]
name = "todo"
version = "0.1.0"
authors = ["kunjan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
libsql = { git = "https://github.com/tursodatabase/libsql", optional = true }
dirs = { version = "6.0", optional = true }
robius-directories = { version = "5.0", optional = true }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:libsql", "dep:robius-directories"]
mobile = ["dioxus/mobile", "dep:libsql", "dep:robius-directories"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# 64 bit MSVC
[target.x86_64-pc-windows-msvc]
rustflags = [
    "-C", "link-arg=/STACK:8000000"
]

# 64 bit Mingw
[target.x86_64-pc-windows-gnu]
rustflags = [
    "-C", "link-arg=-Wl,--stack,8000000"
]
